# Clear-Seeing-App

./: .env.example  .gitignore  .replit  README.md  app.py  auth.py  auth_magic_link.py  backup.sql  db.py  llm.py  prompts  pyproject.toml  replit.md  replit_auth.py  stripe_webhooks.py  system_prompt.txt
.agents/: agent_assets_metadata.toml
attached_assets/: DB_Safety_1773946662390.docx  Here_are_the_deploy_logs_1772901679776.docx  Pasted--Serving-Flask-app-app-Debug-mode-off-WARNING-This-is-a_1773082063248.txt  Pasted--last-3-sessions-conversation-phase-pointer-created-at-_1773421242978.txt  Pasted-AGENT-PROMPT-COPY-PASTE-Task-Convert-the-Clear-Seeing-a_1774942068180.txt  Pasted-AGENT-PROMPT-DOC-3-How-Does-This-Work-Replace-the-entir_1774387659651.txt  Pasted-Add-these-additional-tests-to-the-same-file-tests-test-_1773171396275.txt  Pasted-Agent-Prompt-Branch-feature-stripe-subscription-Scope-o_1773853321675.txt  Pasted-Agent-Prompt-Session-Entry-Screen-Add-the-session-entry_1773427148369.txt  Pasted-Both-fixes-are-valid-Here-is-the-updated-prompt-only-tw_1773174223090.txt  Pasted-Branch-feature-capacity-billing-Scope-llm-py-db-py-chat_1773410607716.txt  Pasted-Branch-feature-landing-ui-Scope-Update-only-the-landing_1773426053344.txt  Pasted-Branch-feature-session-email-Scope-services-session-ema_1773865133082.txt  Pasted-Branch-feature-session-ui-refinement-Scope-Modify-only-_1773426681612.txt  Pasted-Branch-feature-ux-improvements-Scope-services-prompts-p_1773871076484.txt  Pasted-Build-an-LLM-behavior-test-suite-for-the-revised-Clear-_1774470369752.txt  (+42 more)
(+58 files in other folders)
