[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "flask>=3.1.3",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "stripe>=14.4.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]
